    * FIX: Fixed searching hosts by aliases/adresses
    * FIX: Remove duplicate entries from Quicksearch
    * FIX: Avoid timed browser reload after execution of exections
    * FIX: Hosttag filter now works in service related views
    * FIX: Added code to prevent injection of bogus varnames
           (This might break code which uses some uncommon chars for varnames)

    BI:
    * FIX: Fix exception when showing BI tree in reporting time warp
    * FIX: Fixed blue triangle link: would show more aggregations,
       if one name was the prefix of another

    Notifications:
    * Blacklisting for services in the felixble notification system
    * FIX: mail with graph plugin: set explicit session.save_path for php
           Fixes instances where the php command couldn't fetch any graphs

    Checks & Agents:
    * diskstat: removed (ever incorrect) latency computation for Linux
    * statgrab_load: support predictive levels, add perf-o-meter
    * ucd_cpu_load: support predictive levels
    * hpux_cpu, blade_bx_load: support predictive levels, add perf-o-meter,
       make WATO-configable
    * check_sql: Database port can now be explicitly set
    * steelhead_perrs: New check for Rivergate Gateways
    * alcatel_power: Check for power supplies on Alcatel switches
    * qnap_disks: New check for Hardisks in Qnap devices
    * Dell Open Manage: SNNP Checks for Physical Disks, CPU and Memory
    * check_tcp: Now able to set custom service description
    * Apache ActiveMQ: New Special Agent and Check to query ActiveMQ Queues
    * check_ftp: can now be configured via Wato
    * windows_tasks: New check to  monitor the Windows Task Scheduler
    * sensatronics_temp: New check for Sensatronic E4 Temperatur Sensor
    * akcp_sensor_drycontact: New Check for AKCP drycontact Sensors
    * FIX: Windows agent: gracefully handle garbled logstate.txt
    * FIX: esx_vsphere_counters: added missing ramdisk type upgradescratch